[gd_scene load_steps=9 format=3 uid="uid://ja7kj1p25fki"]

[ext_resource type="Script" path="res://Assets/Port v2/passion_port.gd" id="1_20d2o"]
[ext_resource type="Texture2D" uid="uid://bsk4ym8d4uxfc" path="res://Assets/Opdelt porte/passionfruit_port_h.png" id="1_k3u1a"]
[ext_resource type="Texture2D" uid="uid://n5ct3dt11sr0" path="res://Assets/Opdelt porte/passionfruit_port_v.png" id="2_cm23f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yqch"]
size = Vector2(64, 20)

[sub_resource type="Animation" id="Animation_mm3im"]
resource_name = "passion_port_open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_les4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_v:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_h:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}

[sub_resource type="Animation" id="Animation_bb7u0"]
resource_name = "passion_port_close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("passion_h:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("passion_v:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2djaj"]
_data = {
"RESET": SubResource("Animation_les4g"),
"passion_port_close": SubResource("Animation_bb7u0"),
"passion_port_open": SubResource("Animation_mm3im")
}

[node name="passion_port" type="StaticBody2D"]
script = ExtResource("1_20d2o")

[node name="passion_h" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("1_k3u1a")

[node name="passion_v" type="Sprite2D" parent="."]
position = Vector2(-13, 0)
texture = ExtResource("2_cm23f")

[node name="passion_port_collision" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_0yqch")

[node name="ap_passion" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2djaj")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
